Adds a note about the required VM options for run configuration.